--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,18 @@
   box-sizing: border-box;
   font-family: "Relaway", sans-serif;
 }
+
+.center {
+  display: flex;
+  max-width: 1100px;
+  padding: 0 2%;
+  margin: 0 auto;
+}
+
+section.main {
+  background-image: url("../images/bg.svg");
+  background-position: center;
+  background-size: cover;
+  min-height: 700px;
+  padding: 20px;
+}
