--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
   max-width: 1100px;
   padding: 0 2%;
   margin: 0 auto;
+  flex-wrap: wrap;
 }
 
 section.main {
@@ -17,5 +18,53 @@ section.main {
   background-position: center;
   background-size: cover;
   min-height: 700px;
-  padding: 20px;
+  padding: 20px 0 80px 0;
+}
+
+.menu {
+  display: flex;
+  width: 100%;
+}
+
+.logo-menu {
+  width: 50%;
+}
+
+.itens-menu {
+  width: 50%;
+  text-align: center;
+}
+
+.itens-menu a {
+  font-weight: bold;
+  color: white;
+  text-decoration: none;
+  display: inline-block;
+  margin: 0 10px;
+}
+
+.itens-menu a:hover {
+  border-bottom: 2px solid #ffdd33;
+}
+
+.itens-menu a.contato {
+  background-color: #0f3fd3;
+  padding: 10px 10px;
+  border-radius: 10px;
+}
+.itens-menu a.contato:hover {
+  border: 0;
+}
+.mockup {
+  display: block;
+  width: 100%;
+  color: white;
+  text-align: center;
+  padding-top: 100px;
+}
+.mockup h1 {
+  font-size: 50px;
+}
+.mockup img {
+  max-width: 100%;
 }
