--- a/css/style.css
+++ b/css/style.css
@@ -68,3 +68,75 @@ section.main {
 .mockup img {
   max-width: 100%;
 }
+section.marcas {
+  padding: 100px 0;
+}
+section.marcas img {
+  width: 20%;
+}
+
+section.text {
+  padding: 40px 0;
+  background-color: #fbfcfe;
+}
+
+section.text > .center > h2 {
+  font-size: 64px;
+  text-align: center;
+  width: 100%;
+}
+
+section.text > .center {
+  max-width: 1280px;
+}
+
+section.text > .center > p {
+  font-size: 14px;
+  color: #ccc;
+  text-align: center;
+  width: 100%;
+}
+.diferenciais {
+  display: flex;
+  margin-top: 50px;
+}
+
+.box-diferenciais {
+  box-shadow: 0px 20px 40px #2426721c;
+  width: 31%;
+  margin-right: 2%;
+  padding: 10px 20px;
+  border-radius: 10px;
+}
+
+.box-diferenciais h3 {
+  font-size: 28px;
+  color: black;
+  margin: 20px 0px;
+}
+
+.box-diferenciais p {
+  font-size: 13px;
+  color: #7e92ac;
+  margin-bottom: 20px;
+}
+
+@media screen and (max-width: 768px) {
+  .diferenciais {
+    flex-wrap: wrap;
+  }
+
+  .box-diferenciais {
+    width: 100%;
+    margin-right: 0;
+  }
+  section.marcas > .center {
+    flex-wrap: nowrap;
+    flex-direction: column;
+    align-items: center;
+  }
+  section.marcas img {
+    max-width: 300px;
+    width: 100%;
+  }
+}
